fix bottom not showing on long pages

--- a/resources/tempo.css
+++ b/resources/tempo.css
@@ -5,6 +5,7 @@ html, body {
 	padding: 0;
 	background-color: #efefef;
 	font-family:Helvetica, arial, sans-serif;
+	height: 100%;
 }
 
 a {
@@ -29,7 +30,7 @@ a:hover {
 	min-height: 100vh;
 	min-width:100vw;
 	max-width: 100vw;
-	overflow-y: hidden;
+	overflow: hidden;
 	display:table;
 }	
 
@@ -46,7 +47,7 @@ a:hover {
 }
 
 #sidebar {
-	margin: 0 auto 1000px;
+	margin: 0 auto 100px;
 	width: 200px;
 }
 
@@ -93,8 +94,6 @@ a:hover {
 	clear: right;
 	display: table-cell;
 	width: 80%;
-	overflow:hidden;
-	min-height: 60%;
 }
 
 #main #userlinks {
@@ -119,7 +118,6 @@ a:hover {
 	padding: 0;
 	min-width: 100%;
 	margin: 0;
-	overflow:visible;
 	border-bottom:1px solid #e5e5e5;
 }
 
@@ -167,12 +165,12 @@ li.selected > a {
 
 #main > #content {
 	max-width: 100%;
-	min-height: 90%;
 	background-color: #fff;
 	border-radius:0px 2px 2px 2px;
 	border-left:1px solid #e5e5e5;
 	border-bottom:1px solid #e5e5e5;
 	padding: 10px;
+	margin-bottom: 150px;
 }
 
 #content article {
@@ -200,7 +198,7 @@ li.selected > a {
 
 #bottom { 
 	display: table-row;
-	margin-top:-1px;
+	margin-top:100px;
 }
 
 #footer {
